--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
           </ul>
         </nav>
       </div>
-      <a href="#0" class="logo-mobile">
-				<img class="logo-img" src="svg/noemi-logo.svg" alt="Логотип блога Noemi">
-			</a>
     </div>
     <h1 class="header-title">
     блог о творчестве, спорте, и образе жизни.
@@ -82,7 +79,9 @@
           <button class="send-button" type="button">Отправить</button>
         </form>
       </div>
-      <button class="popup-close" type="button"><img src="svg/form-x.svg" alt="Закрыть окно" class="popup-close-img"></button>
+      <button class="popup-close" type="button">
+        <span class="visually-hidden">Закрыть попап</span>
+      </button>
     </div>
     </div>
   <section class="trends">
